--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             }
             catch(err)
             {
-                alert("Invalid Input")
+                alert("Chotee Ache se type kar")
             }
         }
         function Clear(){
